Java boxing optimization and cleanups for l10ntools.
Patch by: me